k8s/istio-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-manager
  labels:
    istio: manager
spec:
  ports:
  - port: 8080
    name: http-discovery
  selector:
    istio: manager
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-manager
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: ignore
      labels:
        istio: manager
    spec:
      serviceAccountName: istio-manager-service-account
      containers:
      - name: discovery
        image: docker.io/istio/manager:2017-05-01-19.24.52
        imagePullPolicy: Always
        args: ["discovery", "-v", "2"]
        ports:
        - containerPort: 8080
      - name: apiserver
        imagePullPolicy: Always
        image: docker.io/istio/manager:2017-05-01-19.24.52
        args: ["apiserver", "-v", "2"]
        ports:
        - containerPort: 8081
---
